# mcp-clickhouse-lite

./: pyproject.toml
mcp_clickhouse_lite/: mcp_env.py  mcp_server.py
tests/: test_tool.py
